syntax = "proto3";
package files;

message FileRequest {
    string fileUrl = 1;
    uint64 user_id = 2;

}

message FileData {
    string fileName = 1;
    bytes fileData = 2;
    uint64 user_id = 3;
}

